--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
             <div class="row">
               <div class= "header-logos">
                <div class="logo">
-               <img src="image/logo_draft.png">
+               <img src="image/LGN_logo.png">
                </div>
                 <div class="clanName">
                 <img src="image/LGN.jpg">
@@ -74,9 +74,13 @@
             </div>            
             <div class="paragraph">
                 <p>
+                    I participated in this project to practice and enhance my HTML and CSS skills.<br>
+                    The project is still on-going, so the layout and design are not yet final.<br>
+                    I plan to improve the organization of the elements and also plan to make this website responsive.                    
                     <br><br>
                     hehe lmao                   
                     <br> ~Goerge
+                    
                 </p>
             </div>
             
