--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="row">
               <div class= "header-logos">
                <div class="logo">
-               <img src="image/logo_draft.png">
+               <img src="image/LGN_logo.png">
                </div>
                 <div class="clanName">
                 <img src="image/LGN.jpg">
@@ -75,7 +75,7 @@
         </div>
         <div class="bottom">
            <div class="big-logo">
-               <img src="image/logo_draft.png">
+               <img src="image/LGN_logo.png">
            </div>
            
            <div class="container-text">
