--- a/about.html
+++ b/about.html
@@ -60,11 +60,11 @@
             <div class="paragraph">
                 <p>
                     The purpose of this website is to familiarize myself with the HTML, CSS, and Javascript language. <br>It is my first ever attempt in coding a website so it will not look that decent. Viewing the website in <br> mobile will not look clean because it isn't optimized yet to be responsive. I'll aim to improve the <br> website further as I learn more about these languages.
-                    For now, take a look around and see <br> what the website offers :)<br> 
+                    For now, take a look around and see <br> what the website offers.<br> 
                     <br>
 
-                    The website is dedicated to LEGIONDARY, a clan made by a group of friends because why not.
-                    <br> ~NegevBro
+                    The website is dedicated to LEGIONDARY, a clan made by a group of friends.
+                    <br> ~Ralph
 
                 </p>
             </div>
@@ -76,9 +76,7 @@
                 <p>
                     I participated in this project to practice and enhance my HTML and CSS skills.<br>
                     The project is still on-going, so the layout and design are not yet final.<br>
-                    I plan to improve the organization of the elements and also plan to make this website responsive.                    
-                    <br><br>
-                    hehe lmao                   
+                    I plan to improve the organization of the elements and also plan to make this website responsive.                                
                     <br> ~Goerge
                     
                 </p>
